<resources>
    <string name="app_name">通用库</string>
    <string name="double_txt">风格 样式</string>

    <!--page title-->
    <string name="title_section_probar">SectionProBar</string>
    <string name="title_imgtxt_mixture">图文混排</string>
    <string name="title_ring_view">RingView</string>
    <string name="title_ring_view_double">RingView-两行</string>
    <string name="title_ring_view_legend">RingView-图例</string>
    <string name="title_taper_chart">TaperChart</string>
    <string name="title_taper_chart_campair">对比峰值图</string>
    <string name="title_hor_taper_chart">HorTaperChart</string>
    <string name="title_gradient_line">GradientLine</string>
    <string name="title_legend_ring_view">LegendRingView</string>
    <string name="title_circle_progressbar_view">CircleProgressBarView</string>
    <string name="title_shadow_probar">ShadowProBar</string>
    <string name="title_half_circle_proview">HalfCircleProView</string>
    <string name="title_matrix_view">MatrixView</string>
    <string name="title_gradient_probar">GradientProBar</string>
    <string name="title_hor_scroll_selected_view">HorScrollSelectedView</string>
    <string name="title_hor_probar">HorProBar</string>
    <string name="title_wave_view">WaveView</string>
    <string name="title_color_main">图片滤镜</string>
    <string name="title_color_matrix">ColorMatrix</string>
    <string name="title_color_hue">ColorHue</string>
    <string name="title_color_filter">ColorFilter</string>
    <string name="title_refresh_view">RefreshView</string>
    <string name="title_timeruler_view">TimeRulerView</string>
    <string name="title_circlebutton_view">CircleButton</string>
    <string name="title_customscrollview_view">CustomScrollView</string>
    <string name="title_viewpager_transformer">ViewPagerTransformer</string>
    <string name="title_animator_bmp_overturn">图片翻转动画</string>


    <string name="title_activity_menu_main">MenuMainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">景 阳</string>
    <string name="nav_header_subtitle">Email：hongbinghp@gmail.com</string>
    <string name="nav_header_experience">全栈工程师：移动端12年的开发经验</string>
    <string name="nav_header_company">目前就职于：浙江智行合一科技有限公司</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_wechat">微信：faith-hb</string>
    <string name="menu_qq">QQ：907167515</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="menu_github">GitHub</string>
    <string name="title_activity_time_ruler">TimeRulerActivity</string>
</resources>
