<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_wechat"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_wechat"/>
        <item
            android:id="@+id/nav_qq"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_qq"/>
        <!--<item-->
            <!--android:id="@+id/nav_slideshow"-->
            <!--android:icon="@drawable/ic_menu_slideshow"-->
            <!--android:title="@string/menu_slideshow"/>-->
        <!--<item-->
            <!--android:id="@+id/nav_tools"-->
            <!--android:icon="@drawable/ic_menu_manage"-->
            <!--android:title="@string/menu_tools"/>-->
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share"/>
            <item
                android:id="@+id/nav_github"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_github"/>
        </menu>
    </item>

</menu>
